--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build --config ./docusaurus.build.config.js" ,
+    "build": "docusaurus build --config ./docusaurus.build.config.js",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -14,16 +14,16 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.15",
-    "@docusaurus/preset-classic": "2.0.0-beta.15",
-    "@docusaurus/theme-search-algolia": "2.0.0-beta.15",
-    "@mdx-js/react": "1.6.22",
-    "@svgr/webpack": "6.2.1",
-    "clsx": "1.1.1",
+    "@docusaurus/core": "3.3.0",
+    "@docusaurus/preset-classic": "3.3.0",
+    "@docusaurus/theme-search-algolia": "3.3.0",
+    "@mdx-js/react": "3.0.1",
+    "@svgr/webpack": "8.1.0",
+    "clsx": "2.1.1",
     "file-loader": "6.2.0",
-    "prism-react-renderer": "1.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "prism-react-renderer": "2.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "url-loader": "4.1.1"
   },
   "browserslist": {
