--- a/arcus/azureml/experimenting/resources/requirements.txt
+++ b/arcus/azureml/experimenting/resources/requirements.txt
@@ -3,7 +3,7 @@ arcus-ml==1.0.11.1
 opencv-python==3.3.0.9
 azureml-telemetry
 azureml-widgets
-azureml-dataprep
+azureml-dataprep=2.22.2
 azureml-train
 numpy
 pandas
