--- a/samples/Arcus-Kaggle-Download/requirements.txt
+++ b/samples/Arcus-Kaggle-Download/requirements.txt
@@ -2,7 +2,7 @@ arcus-azureml==1.1.2.2.2021123006
 arcus-ml==1.0.11.2022020303rc0
 azureml-telemetry
 azureml-widgets
-azureml-dataprep=2.22.2
+azureml-dataprep==2.22.2
 azureml-train
 numpy
 pandas
